--- a/album.html
+++ b/album.html
@@ -1195,11 +1195,14 @@
         "./Image-Gallery/Album/39/23.jpg",
       ],
       album40: [
-        "https://via.placeholder.com/400/FF33FF",
-        "https://via.placeholder.com/400/FF33FF/000000?text=1",
-        "https://via.placeholder.com/400/FF33FF/000000?text=2",
-        "https://via.placeholder.com/400/FF33FF/000000?text=3",
-        "https://via.placeholder.com/400/FF33FF/000000?text=4",
+        "./Image-Gallery/Album/40/3.jpg",
+        "./Image-Gallery/Album/40/1.jpg",
+        "./Image-Gallery/Album/40/2.jpg",
+        "./Image-Gallery/Album/40/4.jpg",
+        "./Image-Gallery/Album/40/5.jpg",
+        "./Image-Gallery/Album/40/6.jpg",
+        "./Image-Gallery/Album/40/7.jpg",
+        "./Image-Gallery/Album/40/8.jpg",
       ]
     };
 
