--- a/package.html
+++ b/package.html
@@ -173,7 +173,7 @@
         <h4>03.12.2024</h4>
       </a>
       <a href="album.html?album=40">
-        <img src="https://via.placeholder.com/150/FF33AA" alt="Album 40" />
+        <img src="./Image-Gallery/Album/40/3.jpg" alt="Album 40" />
         <h4>00.00.2024</h4>
       </a>
     </div>
